--- a/examples/bookmark-api/bookmarkd/config/app.toml
+++ b/examples/bookmark-api/bookmarkd/config/app.toml
@@ -7,5 +7,13 @@ MongoDBPwd	= ""
 Database    ="bookmarkdb"
 LogLevel    = 4
 
+[production]
+Server      = "0.0.0.0:8080"
+MongoDBHost = "127.0.0.1"
+MongoDBUser	= ""
+MongoDBPwd	= ""
+Database    ="bookmarkdb"
+LogLevel    = 4
+
 
 
