--- a/examples/http-app/Gopkg.toml
+++ b/examples/http-app/Gopkg.toml
@@ -60,3 +60,7 @@
 [[constraint]]
   name = "github.com/rs/cors"
   version = "1.3.0"
+
+[[constraint]]
+  name = "github.com/magefile/mage"
+  version = "1.6.2"
